--- a/1712.md
+++ b/1712.md
@@ -52,9 +52,10 @@ public class Main {
 ```
 도저히 생각이 안나서 인터넷에 검색해보니 방정식처럼 식으 정리해서 구한다.
 ![1712](https://user-images.githubusercontent.com/100505030/184812072-f89460ab-2449-4c63-8f71-ba2d03efd550.jpeg)
-현재 구해야 할 값은 count이므로 count를 구하는 식으 구하고 음수가 나올 수 없으니 count가 음수일 경우 -1을 출력하도록 했다.
-그러나 java.lang.ArithmeticException: / by zero 에러가 난다.
-이는 0으로 나누었을 때 나타나는 에러이다.
+
+현재 구해야 할 값은 count이므로 count를 구하는 식을 구하고 음수가 나올 수 없으니 count가 음수일 경우 -1을 출력하도록 했다.
+
+그러나 java.lang.ArithmeticException: / by zero 에러가 난다. 이는 0으로 나누었을 때 나타나는 에러이다.
 
 3. 최종 코드
 
