--- a/1712.md
+++ b/1712.md
@@ -57,6 +57,8 @@ public class Main {
 
 그러나 java.lang.ArithmeticException: / by zero 에러가 난다. 이는 0으로 나누었을 때 나타나는 에러이다.
 
+그래서 나누는 것은 a / (c - b)이므로 이것에서 오류나는 것으로 생각하고 c-b가 0보다 작으면 안되므로 if문의 조건식으 바꿨다.
+
 3. 최종 코드
 
 ```java
