--- a/1712.md
+++ b/1712.md
@@ -50,14 +50,14 @@ public class Main {
     }
 }
 ```
-도저히 생각이 안나서 인터넷에 검색해보니 방정식처럼 식으 정리해서 구한다.
+도저히 생각이 안나서 인터넷에 검색해보니 방정식처럼 식을 정리해서 구한다.
 ![1712](https://user-images.githubusercontent.com/100505030/184812072-f89460ab-2449-4c63-8f71-ba2d03efd550.jpeg)
 
 현재 구해야 할 값은 count이므로 count를 구하는 식을 구하고 음수가 나올 수 없으니 count가 음수일 경우 -1을 출력하도록 했다.
 
 그러나 java.lang.ArithmeticException: / by zero 에러가 난다. 이는 0으로 나누었을 때 나타나는 에러이다.
 
-그래서 나누는 것은 a / (c - b)이므로 이것에서 오류나는 것으로 생각하고 c-b가 0보다 작으면 안되므로 if문의 조건식으 바꿨다.
+그래서 나누는 것은 a / (c - b)이므로 이것에서 오류나는 것으로 생각하고 c-b가 0보다 작으면 안되므로 if문의 조건식으로 바꿨다.
 
 3. 최종 코드
 
