--- a/2922.md
+++ b/2922.md
@@ -1,2 +1,35 @@
-# 벌집
+# 2922번 벌집
 
+1. 처음 쓴 코드
+
+```java
+import java.util.Scanner;
+public class Main {
+    public static void main(String[] args) {
+        Scanner scanner = new Scanner(System.in);
+
+        int num = scanner.nextInt(); //입력받은 수
+        int sum = 1;
+        int count = 1; // 방의 개수
+
+        if(num == 1)
+            System.out.println(1);
+        while(true) {
+            sum = sum + 6 * count;
+            if(num <= sum) {
+                System.out.println(count+1);
+                break;
+            }
+            count++;
+        }
+    }
+}
+```
+
+
+
+2. 최종코드
+
+```java
+
+```
