--- a/2922.md
+++ b/2922.md
@@ -26,10 +26,37 @@ public class Main {
 }
 ```
 
+![2922](https://user-images.githubusercontent.com/100505030/185027311-56b1d5ca-c60c-478c-a75f-1c431e8d316c.jpeg)
 
+6의 배수로 방이 늘어난다는 것을 발견하고 수의 범위를 생각했다. 그러나 틀렸다고 나왔다.
+
+다시보니 1의 경우와 그 나머지의 경우를 생각했는데 else를 빼먹어 1의 경우도 while문에 진입해서 오류가 났다.
 
 2. 최종코드
 
 ```java
+import java.util.Scanner;
+public class Main {
+    public static void main(String[] args) {
+        Scanner scanner = new Scanner(System.in);
+
+        int num = scanner.nextInt();
+        int sum = 1;
+        int count = 1;
+
+        if(num == 1)
+            System.out.println(1);
+        else {
+            while (true) {
+                sum = sum + 6 * count;
+                if (num <= sum) {
+                    System.out.println(count + 1);
+                    break;
+                }
+                count++;
+            }
+        }
+    }
+}
 
 ```
