--- a/1193.md
+++ b/1193.md
@@ -1,2 +1,13 @@
 # 1193번 벌집
 
+우선 문제를 이해하기 쉽게 그려보았다.
+
+![IMG_1197](https://user-images.githubusercontent.com/100505030/185116386-a81f838e-4318-4135-9969-320df6a20783.JPG)
+
+1. 1인 경우와 아닌 경우로 나누기
+
+   1이 입력으로 들어오면 1로 출력하도록 하고 나머지 경우는 반복문을 통해 구하려고 한다.
+2. 규칙을 찾기
+
+  
+4. flag를 사용했다.
