--- a/1193.md
+++ b/1193.md
@@ -9,5 +9,13 @@
    1이 입력으로 들어오면 1로 출력하도록 하고 나머지 경우는 반복문을 통해 구하려고 한다.
 2. 규칙을 찾기
 
-  
-4. flag를 사용했다.
+   ![IMG_1198](https://user-images.githubusercontent.com/100505030/185117134-56849924-0a33-47cf-b1a5-9f878ab2ad74.JPG)
+   
+   먼저 눈에 띄는 2개의 이동을 생각해보았다. 분자와 분모를 나눠서 보면 분자 또는 분모가 1일 경우 수평 또는 수직으로 이동한다.
+   
+   나머지 이동을 살펴보면 2개의 방향이 존재한다. 이를 구별하기 위해 flag를 정의해봤다.
+3. flag
+
+   
+5. 중요한 점
+6. 주의할 점
