--- a/1193.md
+++ b/1193.md
@@ -16,6 +16,16 @@
    나머지 이동을 살펴보면 2개의 방향이 존재한다. 이를 구별하기 위해 flag를 정의해봤다.
 3. flag
 
+   ![IMG_539808148649-1](https://user-images.githubusercontent.com/100505030/185120460-510a74f5-844b-4125-955e-8692f3a1d0d6.jpeg)
    
-5. 중요한 점
+   나는 분자가 1이어서 분모가 바뀐 경우를 flag = 0으로 정의했다. 즉, 좌측 하향으로 방을 이동한다.
+   
+   반면 분모가 1이어서 분자가 바뀔 경우 flag = 1로 정의하고 우측 상향으로 방을 이동한다.
+4. 중요한 점
+
+   단순히 위의 조건들만 보고 코딩하면 계속 틀린 답이 나온다. 왜냐하면 분자가 1이어서 수평으로 이동한다해도 분자는 계속 1이기 때문이다. 
+   
+   마찬가지로 분모가 1이어서 수직으로 이동해도 분모는 계속 1이다.
+   
+   
 6. 주의할 점
