--- a/1193.md
+++ b/1193.md
@@ -27,5 +27,15 @@
    
    마찬가지로 분모가 1이어서 수직으로 이동해도 분모는 계속 1이다.
    
+   ![IMG_BF5724D285F7-1](https://user-images.githubusercontent.com/100505030/185125584-a8915516-cb12-4ab2-9c3c-eeea97fa1c59.jpeg)
    
+   그림을 보면 사각형으로 표시된 부분이 이어져 있으면 안된다는 것이다. 
+   
+   그래서 분자가 1이면서 현재 flag가 0이 아닐 경우 수평 이동이 있어야 한다.
+   
+   마찬가지로 분모가 1이면서 현재 flag가 1이 아닐 경우 수직 이동이 있어야 한다.
 6. 주의할 점
+
+   나는 1과 1이 아닌 경우를 나눠서 생각했기 때문에 반복문은 입력 받은 수보다 1 작게 반복해야한다.
+   
+   시작은 늘 1/1에서 수평으로 이동하므로 flag는 1로 초기화를 해주어야 오류가 안난다.
