--- a/2775.md
+++ b/2775.md
@@ -14,7 +14,7 @@
 
 1층 3호 = 0층 1호 + 0층 2호 + 0층 3호 = 1 + 2 + 3 = 6명
 
-2층 3호 = 1층 1호 + 1층 2호 + 1층 3호 = 1 + (0층 1호 + 0층 2호) + (0층 1호 + 0층 2호 + 0층 3호) = 10명
+2층 3호 = 1층 1호 + 1층 2호 + 1층 3호 = (0층 1호) + (0층 1호 + 0층 2호) + (0층 1호 + 0층 2호 + 0층 3호) = 10명
 
 .
 
@@ -28,15 +28,18 @@
 
 구해야 할 값 = k-1층의 1호부터 n호까지의 합
 
-위와 같이 구하려고 하는 전 층의 값이 필요하므로 차례로 계산해 나갔다.
+위와 같이 구하려면 하는 전 층의 값이 필요하므로 차례로 계산해 나갔다.
 
+```java
 for(int j = 0; j < n; j++)
-                person[0][j] = j+1; //0층 사람 수 입력
+   person[0][j] = j+1; //0층 사람 수 입력
 
-            for(int j = 1; j < k; j++) {
-                for(int l = 0; l < n; l++) {
-                    for(int m = 0; m <= l; m++) {
-                        person[j][l] += person[j-1][m];
-                    }
-                }
-            }
+for(int j = 1; j < k; j++) { //층
+   for(int l = 0; l < n; l++) { //호
+      for(int m = 0; m <= l; m++) { //전 층의 값을 더하기 위한 반복
+          person[j][l] += person[j-1][m];
+      }
+   }
+}
+
+```
