--- a/10250.md
+++ b/10250.md
@@ -18,8 +18,8 @@ public class Main {
             int W = Integer.parseInt(st.nextToken()); // 넓이 = 호
             int N = Integer.parseInt(st.nextToken()); // 도착한 순서
 
-            int h = N % H;
-            int w = N / H + 1;
+            int h = N % H; //배정 받을 층수
+            int w = N / H + 1; //배정 받을 호수
 
             if(w < 10) {
                 result.append(h).append(0).append(w);
@@ -36,5 +36,45 @@ public class Main {
     }
 }
 ```
+![tmp](https://user-images.githubusercontent.com/100505030/193199063-5bf7f575-943f-4628-b1fd-a8c39ef59b41.png)
++ 위의 이미지는 백준 문제에서 제공하는 이미지이다.
++ 빨간 숫자는 들어온 순서를 의미한다.
++ 즉, 아래에서 위로 세로로 먼저 방을 배정하면 된다고 생각했다.
++ 그러나 채점은 틀렸다고 나왔다.
+2. 최종 코드
+```java
+import java.io.*;
+import java.util.StringTokenizer;
 
-2. 
+public class Main {
+    public static void main(String[] args) throws IOException {
+        BufferedReader bf = new BufferedReader(new InputStreamReader(System.in));
+
+        int testcase = Integer.parseInt(bf.readLine());
+        int[] answer = new int[testcase];
+
+        for(int i = 0; i < testcase; i++) {
+            StringTokenizer st = new StringTokenizer(bf.readLine());
+            int H = Integer.parseInt(st.nextToken()); // 높이 = 층
+            int W = Integer.parseInt(st.nextToken()); // 넓이 = 호
+            int N = Integer.parseInt(st.nextToken()); // 도착한 순서
+
+            int h = N % H;
+            int w = N / H + 1;
+            if(h == 0) { //딱 나누어 떨어질 경우
+                h = H;
+                w -= 1;
+            }
+
+            answer[i] = h * 100 + w;
+        }
+        for(int i = 0; i < testcase; i++) {
+            System.out.println(answer[i]);
+        }
+        bf.close();
+    }
+}
+```
++ 첫 번째 코드에서 끝에 방들(6, 12, 18 등)에 대해 입력해보면 틀린 값이 나온다.
++ 즉, h == 0이면 층은 0층이 되고 호수는 1이 더 증가한다.(몫이 증가하므로)
++ 그래서 위의 조건일 때 올바르게 해주면 된다.
